--- a/sass/tablet.css
+++ b/sass/tablet.css
@@ -1,18 +1,60 @@
+@charset "UTF-8";
 html, body {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
+  user-select: none;
 }
 
 @font-face {
   font-family: "montserrat-extra-light";
-  src: url("../fonts/montserrat/Montserrat-ExtraLight.otf");
+  src: url("../fonts/montserrat/Montserrat-ExtraLight.ttf");
   font-weight: 200;
+  font-style: normal;
+}
+@font-face {
+  font-family: "montserrat-light";
+  src: url("../fonts/montserrat/Montserrat-Light.ttf");
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: "montserrat-regular";
+  src: url("../fonts/montserrat/Montserrat-Regular.ttf");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "montserrat-medium";
+  src: url("../fonts/montserrat/Montserrat-Medium.ttf");
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: "montserrat-semi-bold";
+  src: url("../fonts/montserrat/Montserrat-SemiBold.ttf");
+  font-weight: 600;
   font-style: normal;
 }
 .montserrat-extra-light {
   font-family: "montserrat-extra-light";
+}
+
+.montserrat-light {
+  font-family: "montserrat-light";
+}
+
+.montserrat-regular {
+  font-family: "montserrat-regular";
+}
+
+.montserrat-medium {
+  font-family: "montserrat-medium";
+}
+
+.montserrat-semi-bold {
+  font-family: "montserrat-semi-bold";
 }
 
 .text-white {
@@ -21,6 +63,26 @@ html, body {
 
 .text-center {
   text-align: center;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.justify-content-between {
+  justify-content: space-between;
+}
+
+.align-self-start {
+  align-self: flex-start;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .wrapper {
@@ -52,7 +114,7 @@ html, body {
 .tablet-screen {
   width: 1027px;
   height: 696px;
-  background-color: #000000;
+  background-color: #181A1C;
   border-radius: 20px;
 }
 
@@ -123,6 +185,14 @@ html, body {
   bottom: 3rem;
 }
 
+.main-app-link {
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: 0.3s;
+}
+
 .main-apps .fa {
   color: white;
   width: 60px;
@@ -152,6 +222,401 @@ html, body {
 
 .main-apps .fa-gear {
   background: #353B48;
+}
+
+.main-app-link:hover {
+  transform: scale(1.1);
+}
+
+.main-app-title {
+  font-size: 12px;
+}
+
+.top-property-navigation {
+  border-bottom: 1px solid rgba(218, 218, 218, 0.35);
+  margin-bottom: 25px;
+}
+
+.top-property-navigation a {
+  text-decoration: none;
+  padding: 0 1rem 14px;
+}
+
+.fa.fa-angle-left {
+  color: #4595ED;
+}
+
+.property-page {
+  padding: 30px;
+  background: #181A1C;
+  height: 696px;
+  box-sizing: border-box;
+  border-radius: 20px;
+}
+
+.property-home-banner {
+  width: 100%;
+  height: 220px;
+  border-radius: 15px 15px 0px 0px;
+  background: url("../img/tablet-images/property-home-banner.png");
+  background-size: cover;
+  padding-top: 131px;
+  padding-left: 30px;
+  box-sizing: border-box;
+  margin-bottom: 25px;
+}
+
+.property-home-title {
+  font-weight: 500;
+  margin: 0;
+  font-size: 2rem;
+}
+
+.property-home-intro {
+  margin: 0;
+  font-size: 1rem;
+  font-weight: 200;
+}
+
+.property-home-address {
+  width: 336px;
+}
+.property-home-address p {
+  font-size: 1.5rem;
+  margin: 0;
+  margin-bottom: 25px;
+}
+
+.width-161 {
+  width: 161px;
+  color: #878B96;
+}
+
+.property-home-roommates {
+  margin-right: 30px;
+}
+
+.property-home-roommates p {
+  font-size: 1.5rem;
+  margin: 0;
+  height: 32px;
+  margin-bottom: 11px;
+}
+
+.roommates-title {
+  padding-bottom: 25px;
+  margin-bottom: 0 !important;
+  color: #878B96;
+}
+
+.evict-button {
+  font-size: 18px;
+  padding: 5px;
+  background: #4595ED;
+  border-radius: 5px;
+}
+
+.width-179 {
+  width: 179px;
+}
+
+.state-price {
+  font-weight: 500;
+  margin: 0;
+  font-size: 1.5rem;
+  position: relative;
+}
+.state-price::after {
+  content: "Гос.цена";
+  font-size: 1rem;
+  position: absolute;
+  font-family: "montserrat-extra-light";
+  font-weight: 200;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 100%;
+}
+
+.profile-home-buttons {
+  width: 626px;
+  margin: 14px auto 0;
+}
+
+.profile-home-button {
+  width: 308px;
+  height: 50px;
+  box-sizing: border-box;
+  border: 1px solid #4595ED;
+  border-radius: 5px;
+  background: #181A1C;
+  font-size: 18px;
+  transition: 0.3s;
+  cursor: pointer;
+}
+.profile-home-button:hover {
+  background-color: #4595ED;
+}
+
+.property-transports {
+  width: 910px;
+  margin: 0 auto;
+  height: 597px;
+  box-sizing: border-box;
+  overflow: auto;
+}
+.property-transports::-webkit-scrollbar {
+  display: none;
+}
+
+.property-transport {
+  width: 430px;
+  height: 325px;
+  box-sizing: border-box;
+  border-radius: 10px;
+  background: #23272A;
+  float: left;
+  margin: 0 50px 50px 0;
+}
+.property-transport:nth-child(2n+0) {
+  margin-right: 0;
+}
+
+.property-transport-banner {
+  background-image: url("../img/tablet-images/property-transport-banner.png");
+  background-size: cover;
+  height: 209px;
+  position: relative;
+}
+.property-transport-banner .numbers {
+  left: 18px;
+}
+.property-transport-banner .price {
+  right: 18px;
+}
+
+.property-transport-seria {
+  font-weight: 300;
+  width: 127px;
+  height: 35px;
+  background: #4595ED;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  position: absolute;
+  margin: 0;
+  left: 9px;
+  top: 9px;
+  font-size: 18px;
+}
+
+.property-transport-desc {
+  color: #878B96;
+  font-size: 18px;
+  position: absolute;
+  bottom: 0;
+}
+
+.property-transport-info {
+  width: 393px;
+  margin: 0 auto;
+  position: relative;
+}
+.property-transport-info span {
+  font-size: 1.5rem;
+  height: 29px;
+}
+.property-transport-info::after {
+  content: "";
+  width: 395px;
+  height: 0.5px;
+  background-image: linear-gradient(to right, transparent, #C4C4C4, transparent);
+  position: absolute;
+  left: 0;
+  bottom: -13px;
+}
+
+.property-transport-buttons {
+  width: 393px;
+  margin: 25px auto 0;
+}
+
+.property-transport-button {
+  width: 187px;
+  height: 50px;
+  background: #4595ED;
+  border: none;
+  font-size: 18px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.property-business-banner {
+  background: url("../img/tablet-images/property-business-banner.png");
+  height: 220px;
+  width: 963px;
+  position: relative;
+  box-sizing: border-box;
+  padding-left: 26px;
+  padding-bottom: 0;
+  background-repeat: no-repeat;
+}
+
+.property-business-state {
+  background: #4595ED;
+  border-radius: 5px;
+  width: 126px;
+  height: 50px;
+  border: none;
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.property-business-intro, .property-business-title {
+  margin: 0;
+}
+
+.property-business-intro {
+  padding-top: 131px;
+  font-weight: 200;
+  font-size: 1rem;
+}
+
+.property-business-title {
+  font-weight: 500;
+  font-size: 2rem;
+}
+
+.property-business-description {
+  position: relative;
+}
+.property-business-description .first-line {
+  height: 342px;
+  width: 1px;
+  background-image: linear-gradient(to bottom, transparent, #878B96, transparent);
+  position: absolute;
+  top: 0;
+  left: 467px;
+}
+.property-business-description .second-line {
+  height: 342px;
+  width: 1px;
+  background-image: linear-gradient(to bottom, transparent, #878B96, transparent);
+  position: absolute;
+  top: 0;
+  right: 123px;
+}
+
+.property-business-info {
+  width: 424px;
+}
+.property-business-info .info {
+  color: #878B96;
+  font-size: 1.5rem;
+  font-family: "montserrat-light";
+  margin: 0;
+  margin-bottom: 20px;
+}
+.property-business-info p {
+  font-size: 24px;
+  font-family: "montserrat-medium";
+  margin: 0;
+  margin-bottom: 20px;
+}
+.property-business-info span {
+  width: 286px;
+  font-family: "montserrat-regular";
+}
+
+.property-business-button {
+  font-size: 18px;
+  background: #4595ED;
+  border-radius: 5px;
+  width: 162px;
+  height: 50px;
+  border: none;
+  box-sizing: border-box;
+  margin-top: 12px;
+  cursor: pointer;
+}
+
+.property-business-info-price {
+  font-weight: 500;
+  margin-top: 10px;
+  font-size: 1.5rem;
+}
+
+.property-business-history {
+  width: 460px;
+  margin-left: 73px;
+}
+.property-business-history .history {
+  color: #878B96;
+  font-size: 1.5rem;
+  font-family: "montserrat-light";
+  margin: 0;
+  margin-bottom: 20px;
+}
+.property-business-history .state {
+  color: #878B96;
+  font-size: 18px;
+  margin-bottom: 17px;
+}
+.property-business-history .state .naimen {
+  width: 240px;
+}
+.property-business-history .state .cena {
+  width: 150px;
+}
+.property-business-history .products {
+  height: 280px;
+  overflow: auto;
+}
+.property-business-history .products::-webkit-scrollbar {
+  display: none;
+}
+.property-business-history .product {
+  margin-bottom: 20px;
+}
+.property-business-history .product-name {
+  font-size: 1.5rem;
+  width: 210px;
+}
+.property-business-history .product-price {
+  background: #4595ED;
+  border: none;
+  color: white;
+  width: 108px;
+  height: 50px;
+  font-size: 18px;
+  margin-right: 81px;
+  border-radius: 5px;
+  cursor: pointer;
+  outline: none;
+}
+.property-business-history .product-quantity {
+  font-size: 18px;
+}
+
+.report-page {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  box-sizing: border-box;
+  padding: 1rem 1.5rem;
+  background: #181A1C;
+}
+.report-page .tablet-top {
+  margin-top: 0;
+}
+.report-page .top-property-direction {
+  text-decoration: none;
+  text-align: right;
+  display: block;
+  margin-top: 30px;
 }
 
 /*# sourceMappingURL=tablet.css.map */
